<?xml version="1.0"?>
<package format="2">
  <name>sweet_package</name>
  <version>0.0.0</version>
  <description>The sweet_package package</description>
  <maintainer email="parth.gogate@stmartin.edu">johh</maintainer>

  <license>MIT</license>

   <author email="parth.gogate@stmartin.edu">Parth Gogate</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>

  </export>
</package>
